less logging noise
stop sooner for client socket writer

low latency priority change in setperformanceprefs

isolate new connection stage

optimizations

latency TLS values

fixed issue in histogram total off by 1 bucket

more yields between running stages